syntax = "proto3";
package cosmosapi;

import "google/protobuf/any.proto";

// FUNCTION: sign_tx(SignParam{input: CosmosTxInput}): CosmosTxOutput

message Coin {
    uint64 amount = 1;
    string denom = 2;
}

message StdFee {
    repeated Coin amount = 1;
    uint64 gas = 2;
}

message CosmosTxInput {
    uint64 account_number = 1;
    string chain_id = 2;
    StdFee fee = 3;
    string memo = 4;
    map<string, google.protobuf.Any> msgs = 5; //@@XM repeated is not allowed for map type
    uint64 sequence = 6;
    string path = 7;
    string payment_dis = 8;
    string to_dis = 9;
    string from_dis = 10;
    string fee_dis = 11;
}

message CosmosTxOutput {
    string signature = 1;
    string txHash = 2;
}